<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Androidimg</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_label">start</string>
    <string name="label_none">None</string>
    <string name="label_grey">Grey</string>
    <string name="label_Sodel">Sodel</string>
    <string name="label_number">Number</string>
    <string name="label_head">Head</string>
    <string name="label_clear">Clear</string>

</resources>
